--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Jonathan Cremin &mdash; Web Hacker/Engineer/Developer</title>
+	<title>Hector Zarate - iOS Cowboy</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/css/style.css">
-	<link rel="openid.server" href="http://crem.in/openid/index.php" />
-	<link rel="openid.delegate" href="http://crem.in/openid/index.php" />
 </head>
 <body>
 	<div class="container-fluid">
@@ -20,15 +18,8 @@
 			{{ content }}
 			
 		<footer>
-		<small>Design and content &copy; 2011 Jonathan Cremin</small>
+		<small>2013 Hector Zarate. <br />Hosted in <a href="http://github.com">Github</a>. Served by <a href="http://jekyllrb.com">Jekyll</a>. CSS by <a href="http://crem.in">Jonathan Cremin</a>. </small>
 		</footer>
 	</div>
-
-	<script>
-		var _gaq=[['_setAccount','UA-66209-1'],['_trackPageview'],['_trackPageLoadTime']];
-		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-		s.parentNode.insertBefore(g,s)}(document,'script'));
-	</script>
 </body>
 </html>
