--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header>
-	<h1><a href="/">Jonathan Cremin</a> <small>Looking to get in touch? Email me at <a href="mailto:jonathan@crem.in">jonathan@crem.in</a></small></h1>
+	<h1><a href="/">Hector Zarate</a> <small>Follow me at: <a href="https://twitter.com/hecktorzr">@hecktorzr</a></small></h1>
 </header>
 
 <hr />
@@ -13,8 +13,6 @@ layout: default
 	
 	<div class="entry">
 	{{ content }}
-	
-	<a id="more" href="{{ page.url }}#disqus">Comments &raquo;</a>
 	</div>
 	
 </div>
@@ -29,22 +27,3 @@ layout: default
     {% endfor %}
   </ul>
 </div>
-
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'cremin'; // required: replace example with your forum shortname
-
-    // The following are highly recommended additional parameters. Remove the slashes in front to use.
-	var disqus_identifier = '{{ page.wordpress_id }} {{ page.wordpress_url }}';
-	var disqus_url = 'http://crem.in{{ page.url }}';
-	var disqus_title = "{{ page.title }}";
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments.</a></noscript>
