--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,15 @@ sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
 sup{top:-0.5em;}
 sub{bottom:-0.25em;}
 img{border:0;-ms-interpolation-mode:bicubic;}
+p img{
+	display: block;
+	margin-top: 1em;
+	margin-left: auto;
+	margin-right:auto;
+
+	margin-bottom: 1em;
+	max-width:100%
+}
 button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle;}
 button,input{line-height:normal;*overflow:visible;}
 button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
