--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Hector Zarate - iOS Cowboy</title>
+        <title>{{ page.title }}</title>
 	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="author" content="Hector Zarate">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/css/style.css">
