Updated Header for posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header>
-	<h1><a href="/">Hector Zarate</a> <small>Follow me at: <a href="https://twitter.com/hecktorzr">@hecktorzr</a></small></h1>
+        <h1><a href="/">Hector Zarate</a> <small><a href="http://twitter.com/hecktorzr">@hecktorzr</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1>
 </header>
 
 <hr />
