--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ p img{
 	margin-top: 1em;
 	margin-left: auto;
 	margin-right:auto;
-
+    border:1px solid #eee;
 	margin-bottom: 1em;
 	max-width:100%
 }
