Updated copyright year

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 			{{ content }}
 			
 		<footer>
-		<small>2013 Hector Zarate. <br />Hosted in <a href="https://github.com/iOSCowboy/iOSCowboy.github.io">Github</a>. Served by <a href="http://jekyllrb.com">Jekyll</a>. CSS by <a href="http://crem.in">Jonathan Cremin</a>. </small>
+		<small>2013 - 2014. By Hector Zarate. <br />Hosted in <a href="https://github.com/iOSCowboy/iOSCowboy.github.io">Github</a>. Served by <a href="http://jekyllrb.com">Jekyll</a></small>
 		</footer>
 	</div>
 </body>
