--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 			{{ content }}
 			
 		<footer>
-		<small>2013 - 2014. Written by <a href="https://plus.google.com/101131853640468147258/about">Hector Zarate</a>.<br />Hosted in <a href="https://github.com/iOSCowboy/iOSCowboy.github.io">Github</a>. Served by <a href="http://jekyllrb.com">Jekyll</a></small>
+		<small>2013 - 2014. Written by <a href="https://plus.google.com/101131853640468147258?rel=author">Hector Zarate</a>.<br />Hosted in <a href="https://github.com/iOSCowboy/iOSCowboy.github.io">Github</a>. Served by <a href="http://jekyllrb.com">Jekyll</a></small>
 		</footer>
 	</div>
 </body>
