Changed title of website

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header>
-        <h1><a href="/">Hector Zarate</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1>
+        <h1><a href="/">iOS Cowboy</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1>
 </header>
 
 <hr />
