--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
         <title>{{ page.title }}</title>
-	<meta name="description" content="">
+	<meta name="description" content="Weekly posts on iOS, Objective-C and Software Engineering by Hector Zarate.">
 	<meta name="author" content="Hector Zarate">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
