Added some keywords

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 	
         <title>{{ page.title }}</title>
 	<meta name="description" content="Weekly posts on iOS, Objective-C and Software Engineering by Hector Zarate.">
+	<meta name="keywords" content="ios, objective-c, xcode, programming, software engineering, apple, iphone, ipad, hector zarate, ios cowboy, c, ansi-c">
 	<meta name="author" content="Hector Zarate">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
