--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,15 @@
-<!doctype html>
-<html lang="en" class="no-js">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	
-        <title>{{ page.title }}</title>
-	<meta name="description" content="Weekly posts on iOS, Objective-C and Software Engineering by Hector Zarate.">
-	<meta name="keywords" content="ios, objective-c, xcode, programming, software engineering, apple, iphone, ipad, hector zarate, ios cowboy, c, ansi-c">
-	<meta name="author" content="Hector Zarate">
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/style.css">
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-         
-         ga('create', 'UA-46675146-1', 'ioscowboy.com');
-         ga('send', 'pageview');
-    </script>
-</head>
-<body>
-	<div class="container-fluid">
-	
-			<!-- Post -->
-			{{ content }}
-			
-		<footer>
-		<small>2013 - 2014. Written by <a href="https://plus.google.com/101131853640468147258?rel=author">Hector Zarate</a>.<br />Hosted in <a href="https://github.com/iOSCowboy/iOSCowboy.github.io">Github</a>. Served by <a href="http://jekyllrb.com">Jekyll</a></small>
-		</footer>
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en-us">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include sidebar.html %}
+
+    <div class="content container">
+      {{ content }}
+    </div>
+
+  </body>
 </html>
