--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,18 +1,25 @@
 ---
 layout: default
 ---
-<header>
-        <h1><a href="/">iOS Cowboy</a> <small><a href="http://twitter.com/iOSCowboy">@iOSCowboy</a> | <a href="https://pl.linkedin.com/in/hecktorzr/">LinkedIn</a></small></h1>
-</header>
 
-<hr />
-
-<div id="main" role="main">
 <div class="post">
-	<h2><a href="{{ page.url }}">{{ page.title }}</a> <small>Published {{ page.date | date_to_string }}</small></h2>
-	
-	<div class="entry">
-	{{ content }}
-	</div>
-	
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
+  {{ content }}
+</div>
+
+<div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
 </div>
